--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <head>
       <title>Spell</title>
       <script type="module" src="/index.js"></script>
+      <link rel="stylesheet" href="./styles.css" type="text/css" media="screen" />
     </head>
     <body></body>
 </html>
