--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
       <title>Spell</title>
-      <script type="module" src="/index.js"></script>
+      <script type="module" src="./index.js"></script>
       <link rel="stylesheet" href="./styles.css" type="text/css" media="screen" />
     </head>
     <body></body>
