--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html>
     <head>
+      <base href="/">
       <title>Spell</title>
       <script type="module" src="./index.js"></script>
       <link rel="stylesheet" href="./styles.css" type="text/css" media="screen" />
     </head>
-    <body></body>
+    <body>
+    </body>
 </html>
